_assets_src/sass/components/intro/_intro-tile.scss
// -------------------------------------
//   Component - Intro Tile
// -------------------------------------
/**
  * @name intro-tile
  * @desc Styles for the intro tile component.
**/

.intro-tile {
  @extend %section;
  height: 100vh; width: 100vw;
  min-width: $base_html_w_min;
  min-height: $base_html_w_min;
}

// -------------------------------------
//   Intro Tile - Images
// -------------------------------------

.intro-tile__image-section {
  opacity: 0;
  @include transitions(opacity);

  &.intro-tile__image-section--visible {
    opacity: 1;
  }
}

// -------------------------------------
//   Intro Tile - Links
// -------------------------------------
.intro-tile__links {
  @include transform-center;
  text-align: center;

  > a {
    @include font--style("h2");
    @include section--margin-top("sm");
    &:first-child { margin-top: 0 !important; }
  }
}

